--- a/home.html
+++ b/home.html
@@ -4,48 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>It is my home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-<pre>It's Me Gourav Dhanda</pre>
+        <nav>
+           <a href="index.html">Home</a> <a href="https://www.instagram.com/gourav_dhanda_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">My Instagram</a>
+            <a href="https://www.whatsapp.com" target="_blank">My Whatsapp</a>
+            <a href="all%20my%20insta%20photos.html">All My Insta photos</a>
+            <a href="Playgame.html">Play Game</a>
+        </nav>
     </header>
- <div class="container">
-    <div class="profile-img">
-        <img src="Screenshot 2025-05-20 154004.png" alt="Profile Image">
-        <link rel="stylesheet" href="style.css">
-    </div>
-    
-</div>
 
+    <div class="container">
+        <div class="profile-img">
+            <img src="Screenshot 2025-05-20 154004.png" alt="Profile Image">
+        </div>
+    </div>
 
     <h1>Where I live </h1>
     <pre>I live in a village of jind district. It is a small city which is a part of haryana. It is an ideal city
 in my state . Though it is a city, all the modern facilities like electricity,gas and mobile network area
-available here.There are many notable persons who are nationally and internationally recognized. This city
+available here.There many notable persons who are nationally and internationally recognized. This city
 is completely free from  confusion.I live in Dhanda kheri village. The villagers are very simple
-They feel proud to live in this area which is safe and secured. There are many attractions in our village 
+They feel proud to live in this area which is safe and secured. There are many attractions in our village
 like medical facilities, education facilities, and communication system. This village is comparatively free from terrorisma
 and anti-social activities like other villages of the country. I feel happy to live in the village.</pre>
 
-<h2>What I am doing</h2>
-<pre>I have  12th standard exams, a significant milestone for any student! This means you're likely at a crossroads,
-pondering your future education or career path. You might be researching different colleges and universities, 
-exploring various courses, or considering vocational training or even job opportunities. This is a time of 
+    <h2>What I am doing</h2>
+    <pre>I have  12th standard exams, a significant milestone for any student! This means you're likely at a crossroads,
+pondering your future education or career path. You might be researching different colleges and universities,
+exploring various courses, or considering vocational training or even job opportunities. This is a time of
 exciting possibilities as you prepare to embark on the next chapter of your life.</pre>
 
-
-<footer>
-  <div class="footer-container">
-    <p>Made with 💙 by Gourav Dhanda</p>
-    <p>“Stay curious. Keep learning. The best is yet to come.”</p>
-    <div class="footer-links">
-      <a href="https://www.instagram.com/gourav_dhanda_" target="_blank">Instagram</a>
-      <a href="https://www.whatsapp.com" target="_blank">WhatsApp</a>
-      <a href="#">Back to Top</a>
-    </div>
-    <p class="copyright">&copy; 2025 Gourav Dhanda. All rights reserved.</p>
-  </div>
-</footer>
-</body>
+    <footer>
+        <div class="footer-container">
+            <p>Made with 💙 by Gourav Dhanda</p>
+            <p>“Stay curious. Keep learning. The best is yet to come.”</p>
+            <div class="footer-links">
+                <a href="https://www.instagram.com/gourav_dhanda_" target="_blank">Instagram</a>
+                <a href="https://www.whatsapp.com" target="_blank">WhatsApp</a>
+                <a href="#">Back to Top</a>
+            </div>
+            <p class="copyright">&copy; 2025 Gourav Dhanda. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
